fixed propic spacing

--- a/app.css
+++ b/app.css
@@ -43,6 +43,11 @@ body {
 	min-width: 550px;
 }
 
+.profpic {
+	margin-left: auto;
+    margin-right: auto;
+}
+
 
 
 
